--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -27,4 +27,17 @@
     <dimen name="status_bar_padding_end">5.0dip</dimen>
     <!-- rounded corner content padding -->
     <dimen name="rounded_corner_content_padding">10dp</dimen>
+
+    <!-- Location of physical charger port -->
+    <dimen name="physical_charger_port_location_normalized_x">0.5</dimen>
+    <dimen name="physical_charger_port_location_normalized_y">1</dimen>
+
+    <!-- Location of physical power button -->
+    <dimen name="physical_fingerprint_sensor_center_screen_location_y">1025px</dimen>
+    <dimen name="physical_power_button_center_screen_location_y">1025px</dimen>
+
+    <!-- Location on the screen of the center of the physical volume up/down buttons -->
+    <dimen name="physical_volume_down_button_center_screen_location_y">1150px</dimen>
+    <dimen name="physical_volume_up_button_center_screen_location_y">950px</dimen>
+
 </resources>
