spes: overlay: Tweak some auto brightness configs
 - set config_lightSensorWarmupTime to 200ms to avoid overly low initial
   readings impacting brightness decisions after screen wake in a new environment.

 - Decrease debouncing period, this is way too long and the unnecessary
   lag is quite irritating.

Change-Id: I7fa1fcc01bf2f79f5de9322ec26751d53335a86a

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -783,4 +783,9 @@
 
     <!-- Whether the new Auto Selection Network UI should be shown -->
     <bool name="config_enableNewAutoSelectNetworkUI">true</bool>
+
+    <!-- Amount of time it takes for the light sensor to warm up in milliseconds. 
+    For this time after the screen turns on, the Power Manager 
+    will not debounce light sensor readings -->
+    <integer name="config_lightSensorWarmupTime">200</integer>
 </resources>
