spes: Enable QR scanner shortcut in lock screen
Ref: https://blog.esper.io/android-13-deep-dive/#qr_code_shortcut
Change-Id: I1b3d5e061eb4ee543389ec0890fc1d49d5cf3f35

Signed-off-by: Karan Parashar <whyredfire@gmail.com>
Change-Id: Idc25227ef32118276de2db25c68a903943e7a553

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -721,4 +721,7 @@
 
     <!-- Whether to cancel fingerprint operation if not idle -->
     <bool name="config_fpCancelIfNotIdle">true</bool>
+
+    <!-- Whether or not to enable the lock screen entry point for the QR code scanner. -->
+   <bool name="config_enableQrCodeScannerOnLockScreen">true</bool>
 </resources>
