--- a/overlay-nad/frameworks/base/packages/SystemUI/res/values/nad_config.xml
+++ b/overlay-nad/frameworks/base/packages/SystemUI/res/values/nad_config.xml
@@ -17,4 +17,13 @@
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">3</integer>
     <integer name="config_maxVisibleNotificationIconsOnLock">4</integer>
+
+        <!-- The CPU temperature sensor path, defaults to empty -->
+    <string name="config_cpuTempSensor" translatable="false">/sys/class/thermal/thermal_zone39/temp</string>
+
+    <!-- The CPUs to display in CPUInfoService view -->
+    <string name="config_displayCpus" translatable="false">0,4</string>
+
+    <!-- The CPU temperature divider, if needed -->
+    <integer name="config_cpuTempDivider" translatable="false">1000</integer>
 </resources>
