spes: overlay: Enable Wide Color Gamut support
Change-Id: Ia50a03cd8ac32ce4bb1c1a8691d57c674b9cfb40
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Jabiyeff <cebiyevanar@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -736,4 +736,7 @@
 
     <!-- Whether or not to enable the lock screen entry point for the QR code scanner. -->
    <bool name="config_enableQrCodeScannerOnLockScreen">true</bool>
+
+    <!-- Whether or not wcg mode should be enabled on this device -->
+    <bool name="config_enableWcgMode">true</bool>
 </resources>
