--- a/rro_overlays/CarrierConfigOverlay/res/xml/vendor.xml
+++ b/rro_overlays/CarrierConfigOverlay/res/xml/vendor.xml
@@ -1175,6 +1175,9 @@
     </carrier_config>
     <carrier_config mcc="440" mnc="10">
         <boolean name="carrier_volte_available_bool" value="true" />
+    </carrier_config>
+    <carrier_config mcc="440" mnc="10">
+        <boolean name="carrier_volte_available_bool" value="true" />
         <boolean name="carrier_vt_available_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="440" mnc="11">
