spes: Welcome to Derpfest AOSP ify

--- a/overlay/packages/apps/Dialer/java/com/android/dialer/callrecord/res/values/config.xml
+++ b/overlay/packages/apps/Dialer/java/com/android/dialer/callrecord/res/values/config.xml
@@ -17,4 +17,7 @@
 <resources>
     <bool name="call_recording_enabled">true</bool>
     <integer name="call_recording_audio_source">4</integer>
+
+    <!-- Whether to check that the proximity is unblocked before showing the incoming call UI. -->
+    <bool name="config_answer_proximity_sensor_enabled">false</bool>
 </resources>
